--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@olton/dom",
   "title": "Dom",
   "description": "DOM - Work with HTML elements, animation HTML elements and props, and ajax routines. JQuery replacer.",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "main": "dist/dom.js",
   "type": "module",
   "types": "ts/dom.d.ts",
@@ -41,11 +41,11 @@
   "devDependencies": {
     "@olton/esbuild-plugin-progress": "^0.3.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.24.2",
-    "ftp-deploy": "^2.4.7",
+    "esbuild": "^0.25.0",
     "shx": "^0.3.4"
   },
   "dependencies": {
-    "web-worker": "^1.3.0"
+    "esbuild-plugin-replace": "^1.4.0",
+    "web-worker": "^1.5.0"
   }
 }
