--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@olton/dom",
   "title": "Dom",
   "description": "DOM - Work with HTML elements, animation HTML elements and props, and ajax routines. JQuery replacer.",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "main": "dist/dom.js",
   "type": "module",
-  "types": "ts/dom.d.ts",
+  "types": "types/dom.d.ts",
   "files": [
     "dist"
   ],
