--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "types": "types/dom.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "homepage": "https://metroui.org.ua/",
   "author": {
