--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
     "clean": "shx rm -rf dist/* lib/*",
     "build": "npm run clean && cross-env NODE_NO_WARNINGS=1 NODE_ENV=production node build.js",
     "dev": "npm run clean && cross-env NODE_NO_WARNINGS=1 NODE_ENV=development node build.js",
-    "pub": "npm run build && npm publish --access public"
+    "pub": "npm run build && npm publish --access public",
+    "test": "latte --dom --progress=none"
   },
   "devDependencies": {
     "@olton/esbuild-plugin-progress": "^0.3.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.25.0",
-    "shx": "^0.3.4"
+    "esbuild": "^0.25.4",
+    "shx": "^0.4.0",
+    "@olton/latte": "^0.13.0",
+    "esbuild-plugin-replace": "^1.4.0"
   },
   "dependencies": {
-    "esbuild-plugin-replace": "^1.4.0",
     "web-worker": "^1.5.0"
   }
 }
