--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@olton/esbuild-plugin-progress": "^0.3.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.4",
+    "esbuild-plugin-replace": "^1.4.0",
     "shx": "^0.4.0",
-    "@olton/latte": "^0.13.0",
-    "esbuild-plugin-replace": "^1.4.0"
+    "@olton/latte": "^0.13.0"
   },
   "dependencies": {
     "web-worker": "^1.5.0"
